src/main/java/com/example/memoir/global/error/ErrorResponse.java
package com.example.memoir.global.error;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;

@Builder
@Getter
@AllArgsConstructor
public class ErrorResponse {

    private final int status;
    private final String message;
}
